<resources>
    <string name="app_name"></string>

    <string name="login_btn">Login</string>
    <string name="register_button">Register</string>
    <string name="email">Email</string>
    <string name="email_hint">Write Your Email</string>
    <string name="pass_hint">Write Your Password</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="next_button">Next</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_subtitle">Welcome to Our Shoe Shop</string>
    <string name="inst_title">Instructions</string>
    <string name="inst_subtitle">Browse all our products to find you dream shoe</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
</resources>
