<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   >
    <!--    Constraintlayout works better with few numbers of elements, and helps in making responsive.-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.NoActionBar"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding"
        tools:context=".LoginFragment">

        <TextView
            android:id="@+id/title_text_id"
            style="@style/titleStyle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="cursive"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_text_id"
            style="@style/labelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/email"
            app:layout_constraintTop_toBottomOf="@id/title_text_id"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/email_edit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:height="@dimen/edit_field_height"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="@id/email_text_id"
            app:layout_constraintStart_toStartOf="@id/email_text_id"
            app:layout_constraintTop_toBottomOf="@id/email_text_id" />

        <TextView
            android:id="@+id/pass_text_id"
            style="@style/labelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/pass"
            app:layout_constraintTop_toBottomOf="@id/email_edit_id"
            tools:layout_editor_absoluteX="32dp" />

        <EditText

            android:id="@+id/pass_edit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:height="@dimen/edit_field_height"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/pass_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintTop_toBottomOf="@id/pass_text_id"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login_btn"
            app:layout_constraintTop_toBottomOf="@id/pass_edit_id"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register_button"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            tools:layout_editor_absoluteX="16dp" />

        <!--    -->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>