<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--    Constraintlayout works better with few numbers of elements, and helps in making responsive.-->
    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/padding"
    tools:context=".WelcomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/wlc_text_id"
        style="@style/titleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="cursive"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/welcome_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <TextView
        android:id="@+id/textView"
        style="@style/labelStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/welcome_subtitle"
        app:layout_constraintBottom_toTopOf="@+id/wlc_button_id"
        app:layout_constraintTop_toBottomOf="@+id/wlc_text_id"
        app:layout_constraintVertical_bias="0.102"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/wlc_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wlc_text_id"
        tools:layout_editor_absoluteX="27dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>